--- a/src/assets/css/critical.css
+++ b/src/assets/css/critical.css
@@ -151,6 +151,7 @@
     width: 11.25rem;
     /* 46px - 56px */
     height: clamp(2.875rem, 5.5vw, 3.5rem);
+    border-radius: 30px;
     text-decoration: none;
     font-weight: 700;
     margin: 0;
@@ -164,26 +165,6 @@
     align-items: center;
     position: relative;
     z-index: 1;
-  }
-  #hero-227 .cs-button-transparent:before {
-    content: "";
-    position: absolute;
-    display: block;
-    background: #000;
-    opacity: 1;
-    /* so it sits on top of the border */
-    top: -1px;
-    left: -1px;
-    right: -1px;
-    bottom: -1px;
-    z-index: -1;
-    transform-origin: left;
-    /* this is what creates the grow affect on hover */
-    transform: scaleX(0);
-    transition: transform 0.3s;
-  }
-  #hero-227 .cs-button-transparent:hover:before {
-    transform: scaleX(1);
   }
   #hero-227 .cs-button-transparent .cs-img {
     display: block;
