--- a/src/assets/sass/critical.scss
+++ b/src/assets/sass/critical.scss
@@ -164,6 +164,7 @@
             width: calc(180 / 16 * 1rem);
             /* 46px - 56px */
             height: clamp(2.875rem, 5.5vw, 3.5rem);
+            border-radius: 30px;
             text-decoration: none;
             font-weight: 700;
             margin: 0;
@@ -177,30 +178,6 @@
             align-items: center;
             position: relative;
             z-index: 1;
-
-            &:before {
-                content: "";
-                position: absolute;
-                display: block;
-                background: #000;
-                opacity: 1;
-                /* so it sits on top of the border */
-                top: -1px;
-                left: -1px;
-                right: -1px;
-                bottom: -1px;
-                z-index: -1;
-                transform-origin: left;
-                /* this is what creates the grow affect on hover */
-                transform: scaleX(0);
-                transition: transform 0.3s;
-            }
-
-            &:hover {
-                &:before {
-                    transform: scaleX(1);
-                }
-            }
 
             .cs-img {
                 display: block;
