--- a/src/_includes/components/cta.html
+++ b/src/_includes/components/cta.html
@@ -15,8 +15,8 @@
         <a href="/contact" class="cs-button-solid">Contact Us</a>
     </div>
     <picture>
-        <source media="(max-width: 600px)" srcset="/assets/images/cta-bg.png">
-        <source media="(min-width: 601px)" srcset="/assets/images/cta-bg.png">
-        <img aria-hidden="true" decoding="async" src="/assets/images/cta-bg.png" alt="kitchen cabinets" loading="lazy" width="2500" height="1667">
+        <source media="(max-width: 600px)" srcset="/assets/images/cta-bg.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/cta-bg.jpg">
+        <img aria-hidden="true" decoding="async" src="/assets/images/cta-bg.jpg" alt="coding image" loading="lazy" width="2500" height="1667">
     </picture>
 </section>
