--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -27,13 +27,10 @@
                         <a href="/">Home</a>
                     </li>
                     <li>
-                        <a href="/about">About Us</a>
+                        <a href="/about">About</a>
                     </li>
                     <li>
-                        <a href="/projects">Projects</a>
-                    </li>
-                    <li>
-                        <a href="/testimonials">Reviews</a>
+                        <a href="/projects">Services</a>
                     </li>
                     <li>
                         <a href="/contact">Contact</a>
