--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -899,6 +899,21 @@
     width: 125rem;
   }
 }
+/* Desktop Parallax Effect - 1300px */
+@media only screen and (min-width: 81.25rem) {
+  #cta {
+    background: url("/assets/images/cta-bg.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    /* creates parallax effect on background image */
+    background-attachment: fixed;
+    /* remove img tag so we can make parallax work */
+  }
+  #cta .cs-background img {
+    display: none;
+  }
+}
 /*-- -------------------------- -->
 <---           Footer           -->
 <--- -------------------------- -*/
