--- a/src/assets/css/services.css
+++ b/src/assets/css/services.css
@@ -1,4 +1,4 @@
-/* PAGE-SPECIFIC STYLES FOR THE CONTACT PAGE */
+/* PAGE-SPECIFIC STYLES FOR THE PROJECTS PAGE */
 /*-- -------------------------- -->
 <---          Banner            -->
 <--- -------------------------- -*/
@@ -107,6 +107,168 @@
   }
 }
 /*-- -------------------------- -->
+<---       Side By Side         -->
+<--- -------------------------- -*/
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+  #RTsbs-876,
+  #RTsbsr-876,
+  #RTsbst-876 {
+    padding: var(--sectionPadding);
+  }
+  #RTsbs-876 .cs-container,
+  #RTsbsr-876 .cs-container,
+  #RTsbst-876 .cs-container {
+    width: 100%;
+    /* changes to 1280px at desktop */
+    max-width: 34.375rem;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* 48px - 64px */
+    gap: clamp(3rem, 7vw, 4rem);
+  }
+  #RTsbs-876 .cs-content,
+  #RTsbsr-876 .cs-content,
+  #RTsbst-876 .cs-content {
+    /* set text align to left if content needs to be left aligned */
+    text-align: left;
+    width: 100%;
+    max-width: 33.875rem;
+    /* prevents padding from affecting width and height */
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    /* centers content horizontally, set to flex-start to left align */
+    align-items: flex-start;
+  }
+  #RTsbs-876 .cs-title,
+  #RTsbsr-876 .cs-title,
+  #RTsbst-876 .cs-title {
+    /* 17 characters wide including spaces */
+    max-width: 21ch;
+  }
+  #RTsbs-876 .cs-text,
+  #RTsbsr-876 .cs-text,
+  #RTsbst-876 .cs-text {
+    margin-bottom: 1rem;
+  }
+  #RTsbs-876 .cs-text:last-of-type,
+  #RTsbsr-876 .cs-text:last-of-type,
+  #RTsbst-876 .cs-text:last-of-type {
+    margin-bottom: 2rem;
+  }
+  #RTsbs-876 .cs-button-solid,
+  #RTsbsr-876 .cs-button-solid,
+  #RTsbst-876 .cs-button-solid {
+    font-size: 1rem;
+    /* 46px - 56px */
+    line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+    text-decoration: none;
+    font-weight: 400;
+    text-align: center;
+    margin: 0;
+    color: #fff;
+    min-width: 9.375rem;
+    padding: 0 1.5rem;
+    background-color: var(--primary);
+    border-radius: 30px;
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    /* prevents padding from adding to the width */
+    box-sizing: border-box;
+  }
+  #RTsbs-876 .cs-button-solid:before,
+  #RTsbsr-876 .cs-button-solid:before,
+  #RTsbst-876 .cs-button-solid:before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: white;
+    opacity: 0;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: opacity 0.3s ease-in-out;
+    border-radius: 30px;
+    border: 2px solid var(--primary);
+  }
+  #RTsbs-876 .cs-button-solid:hover,
+  #RTsbsr-876 .cs-button-solid:hover,
+  #RTsbst-876 .cs-button-solid:hover {
+    color: var(--primary);
+  }
+  #RTsbs-876 .cs-button-solid:hover:before,
+  #RTsbsr-876 .cs-button-solid:hover:before,
+  #RTsbst-876 .cs-button-solid:hover:before {
+    opacity: 1;
+  }
+  #RTsbs-876 .cs-picture,
+  #RTsbsr-876 .cs-picture,
+  #RTsbst-876 .cs-picture {
+    display: block;
+    position: relative;
+    width: 100%;
+    max-width: 45.625rem;
+    /* 400px - 775px */
+    height: clamp(17rem, 62vw, 40.4375rem);
+    /* 100px - 200px */
+    /* clips img tag corners */
+    overflow: hidden;
+  }
+  #RTsbs-876 .cs-picture img,
+  #RTsbsr-876 .cs-picture img,
+  #RTsbst-876 .cs-picture img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+  }
+}
+/* Tablet - 768px */
+@media only screen and (min-width: 64rem) {
+  #RTsbs-876,
+  #RTsbsr-876,
+  #RTsbst-876 {
+    padding: var(--sectionPadding);
+  }
+  #RTsbs-876 .cs-container,
+  #RTsbsr-876 .cs-container,
+  #RTsbst-876 .cs-container {
+    flex-direction: row;
+    max-width: 80rem;
+    justify-content: space-between;
+  }
+  #RTsbs-876 .cs-content,
+  #RTsbsr-876 .cs-content,
+  #RTsbst-876 .cs-content {
+    width: 53%;
+    /* reset the padding, add the section padding back to the section container */
+    padding: 0;
+  }
+  #RTsbs-876 .cs-picture,
+  #RTsbsr-876 .cs-picture,
+  #RTsbst-876 .cs-picture {
+    width: 47vw;
+    position: relative;
+  }
+}
+/*-- -------------------------- -->
+<---   Side By Side Reverse     -->
+<--- -------------------------- -*/
+/* Desktop - 1024px */
+@media only screen and (min-width: 64rem) {
+  #RTsbsr-876 .cs-content {
+    /* sends it to the left in the 1st position */
+    order: -1;
+  }
+}
+/*-- -------------------------- -->
 <---          Contact           -->
 <--- -------------------------- -*/
 /* Mobile - 360px */
@@ -149,7 +311,6 @@
     box-sizing: border-box;
     background-color: var(--secondaryLight);
     box-shadow: -12px -12px 23px rgb(230, 230, 230);
-    border-radius: 10px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -201,6 +362,7 @@
     border: none;
     min-width: 9.375rem;
     padding: 0 1.5rem;
+    border-radius: 30px;
     background-color: var(--primary);
     display: inline-block;
     position: relative;
@@ -253,7 +415,6 @@
     /* 40px - 60px */
     gap: clamp(1.5rem, 6vw, 3.75rem);
     position: relative;
-    border-radius: 10px;
   }
   #contact-1105 .cs-ul:before {
     /* stripes graphic */
@@ -272,25 +433,6 @@
     /* 32px - 80px */
     left: clamp(2rem, 9vw, 5rem);
     z-index: -1;
-    border-radius: 10px;
-  }
-  #contact-1105 .cs-picture {
-    display: block;
-    position: relative;
-    width: 100%;
-    max-width: 45.625rem;
-    /* 400px - 775px */
-    /* 100px - 200px */
-    /* clips img tag corners */
-    overflow: hidden;
-  }
-  #contact-1105 .cs-picture img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    object-fit: contain;
   }
   #contact-1105 .cs-li {
     list-style: none;
@@ -330,7 +472,7 @@
     height: clamp(2.75rem, 8.3vw, 5rem);
     margin: 0;
     border-radius: 50%;
-    border: 1px solid #bababa;
+    border: 1px solid var(--primary);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -381,4 +523,4 @@
   }
 }
 
-/*# sourceMappingURL=contact.css.map */
+/*# sourceMappingURL=services.css.map */
