--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -1015,6 +1015,24 @@
     }
 }
 
+/* Desktop Parallax Effect - 1300px */
+@media only screen and (min-width: 81.25rem) {
+    #cta {
+        background: url("/assets/images/cta-bg.jpg");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        /* creates parallax effect on background image */
+        background-attachment: fixed;
+        /* remove img tag so we can make parallax work */
+        .cs-background {
+            img {
+                display: none;
+            }
+        }
+    }
+}
+
 /*-- -------------------------- -->
 <---           Footer           -->
 <--- -------------------------- -*/
