--- a/src/assets/sass/services.scss
+++ b/src/assets/sass/services.scss
@@ -1,4 +1,4 @@
-/* PAGE-SPECIFIC STYLES FOR THE CONTACT PAGE */
+/* PAGE-SPECIFIC STYLES FOR THE PROJECTS PAGE */
 
 /*-- -------------------------- -->
 <---          Banner            -->
@@ -130,6 +130,163 @@
 }
 
 /*-- -------------------------- -->
+<---       Side By Side         -->
+<--- -------------------------- -*/
+
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+    #RTsbs-876,
+    #RTsbsr-876,
+    #RTsbst-876 {
+        padding: var(--sectionPadding);
+
+        .cs-container {
+            width: 100%;
+            /* changes to 1280px at desktop */
+            max-width: calc(550 / 16 * 1rem);
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            /* 48px - 64px */
+            gap: clamp(3rem, 7vw, 4rem);
+        }
+
+        .cs-content {
+            /* set text align to left if content needs to be left aligned */
+            text-align: left;
+            width: 100%;
+            max-width: calc(542 / 16 * 1rem);
+            /* prevents padding from affecting width and height */
+            box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
+            /* centers content horizontally, set to flex-start to left align */
+            align-items: flex-start;
+        }
+
+        .cs-title {
+            /* 17 characters wide including spaces */
+            max-width: 21ch;
+        }
+
+        .cs-text {
+            margin-bottom: calc(16 / 16 * 1rem);
+            &:last-of-type {
+                margin-bottom: calc(32 / 16 * 1rem);
+            }
+        }
+
+        .cs-button-solid {
+            font-size: calc(16 / 16 * 1rem);
+            /* 46px - 56px */
+            line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+            text-decoration: none;
+            font-weight: 400;
+            text-align: center;
+            margin: 0;
+            color: #fff;
+            min-width: calc(150 / 16 * 1rem);
+            padding: 0 calc(24 / 16 * 1rem);
+            background-color: var(--primary);
+            border-radius: 30px;
+            display: inline-block;
+            position: relative;
+            z-index: 1;
+            /* prevents padding from adding to the width */
+            box-sizing: border-box;
+
+            &:before {
+                content: '';
+                position: absolute;
+                height: 100%;
+                width: 100%;
+                background: white;
+                opacity: 0;
+                top: 0;
+                left: 0;
+                z-index: -1;
+                transition: opacity .3s ease-in-out;
+                border-radius: 30px;
+                border: 2px solid var(--primary);
+            }
+  
+            &:hover {
+              color: var(--primary);
+  
+                &:before {
+                    opacity: 1;
+                }
+            }
+        }
+
+        .cs-picture {
+            display: block;
+            position: relative;
+            width: 100%;
+            max-width: calc(730 / 16 * 1rem);
+            /* 400px - 775px */
+            height: clamp(17rem, 62vw, 40.4375rem);
+            // box-shadow: 0px 2.80579px 42.0868px rgba(0, 0, 0, 0.16);
+            /* 100px - 200px */
+            // border-radius: 0 clamp(6.25rem, 17vw, 12.5rem) 0
+            //     clamp(6.25rem, 17vw, 12.5rem);
+            /* clips img tag corners */
+            overflow: hidden;
+
+            img {
+                position: absolute;
+                top: 0;
+                left: 0;
+                height: 100%;
+                width: 100%;
+                object-fit: contain;
+            }
+        }
+    }
+}
+
+/* Tablet - 768px */
+@media only screen and (min-width: 64rem) {
+    #RTsbs-876,
+    #RTsbsr-876,
+    #RTsbst-876 {
+        padding: var(--sectionPadding);
+
+        .cs-container {
+            flex-direction: row;
+            max-width: calc(1280 / 16 * 1rem);
+            justify-content: space-between;
+        }
+
+        .cs-content {
+            width: 53%;
+            /* reset the padding, add the section padding back to the section container */
+            padding: 0;
+        }
+
+        .cs-picture {
+            width: 47vw;
+            position: relative;
+        }
+    }
+}
+
+/*-- -------------------------- -->
+<---   Side By Side Reverse     -->
+<--- -------------------------- -*/
+
+/* Desktop - 1024px */
+@media only screen and (min-width: 64rem) {
+    #RTsbsr-876 {
+        .cs-content {
+            /* sends it to the left in the 1st position */
+            order: -1;
+        }
+    }
+}
+
+/*-- -------------------------- -->
 <---          Contact           -->
 <--- -------------------------- -*/
 
@@ -176,7 +333,6 @@
             box-sizing: border-box;
             background-color: var(--secondaryLight);
             box-shadow: -12px -12px 23px rgb(230, 230, 230);
-            border-radius: 10px;
             display: flex;
             justify-content: space-between;
             flex-wrap: wrap;
@@ -232,6 +388,7 @@
             border: none;
             min-width: calc(150 / 16 * 1rem);
             padding: 0 calc(24 / 16 * 1rem);
+            border-radius: 30px;
             background-color: var(--primary);
             display: inline-block;
             position: relative;
@@ -289,7 +446,6 @@
             /* 40px - 60px */
             gap: clamp(1.5rem, 6vw, 3.75rem);
             position: relative;
-            border-radius: 10px;
 
             &:before {
                 /* stripes graphic */
@@ -308,31 +464,6 @@
                 /* 32px - 80px */
                 left: clamp(2rem, 9vw, 5rem);
                 z-index: -1;
-                border-radius: 10px;
-            }
-        }
-
-        .cs-picture {
-            display: block;
-            position: relative;
-            width: 100%;
-            max-width: calc(730 / 16 * 1rem);
-            /* 400px - 775px */
-            // height: clamp(17rem, 62vw, 40.4375rem);
-            // box-shadow: 0px 2.80579px 42.0868px rgba(0, 0, 0, 0.16);
-            /* 100px - 200px */
-            // border-radius: 0 clamp(6.25rem, 17vw, 12.5rem) 0
-            //     clamp(6.25rem, 17vw, 12.5rem);
-            /* clips img tag corners */
-            overflow: hidden;
-
-            img {
-                position: absolute;
-                top: 0;
-                left: 0;
-                height: 100%;
-                width: 100%;
-                object-fit: contain;
             }
         }
 
@@ -381,7 +512,7 @@
             height: clamp(2.75rem, 8.3vw, 5rem);
             margin: 0;
             border-radius: 50%;
-            border: 1px solid #bababa;
+            border: 1px solid var(--primary);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -440,3 +571,4 @@
         }
     }
 }
+
